--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
     "types": "build/index.d.ts",
     "scripts": {
         "build": "tsc",
-        "prepare": "npm run build"
+        "prepare": "npm run build",
+        "prepublish": "npm version patch",
+        "postpublish": "git push"
     },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/tanayhub/compiled-validations.git"
     },
     "keywords": [
+        "compiled-validation",
         "validation",
-        "node",
-        "json",
-        "typescript"
+        "validate",
+        "definition",
+        "schema"
     ],
     "author": "tanayhub",
     "license": "Apache-2.0",
@@ -27,5 +30,8 @@
     "devDependencies": {
         "@types/node": "^17.0.22",
         "typescript": "^4.6.2"
-    }
+    },
+    "files": [
+        "build/**/*"
+    ]
 }
