--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
     "name": "compiled-validations",
-    "version": "1.0.1",
+    "version": "1.0.0",
     "description": "A node utility that helps validate json objects with the ease of autocomplete",
     "main": "build/index.js",
     "types": "build/index.d.ts",
     "scripts": {
         "build": "tsc",
-        "prepare": "npm run build",
-        "prepublish": "npm version patch",
-        "postpublish": "git push"
+        "prepare": "npm run build"
     },
     "repository": {
         "type": "git",
