--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "types": "build/index.d.ts",
     "scripts": {
         "build": "tsc",
+        "test": "echo \"Error: no test specified\"",
         "prepare": "npm run build"
     },
     "repository": {
