--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "compiled-validations",
-    "version": "1.0.1",
-    "description": "A node utility that helps validate json objects with the ease of autocomplete",
+    "name": "@tanayhub/validations",
+    "version": "1.0.0",
+    "description": "A set of intuitive validations for typescript and javascript",
     "main": "build/index.js",
     "types": "build/index.d.ts",
     "scripts": {
@@ -12,21 +12,21 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/tanayhub/compiled-validations.git"
+        "url": "git+https://github.com/tanayhub/validations.git"
     },
     "keywords": [
-        "compiled-validation",
         "validation",
         "validate",
         "definition",
+        "intuitive",
         "schema"
     ],
     "author": "tanayhub",
     "license": "Apache-2.0",
     "bugs": {
-        "url": "https://github.com/tanayhub/compiled-validations/issues"
+        "url": "https://github.com/tanayhub/validations/issues"
     },
-    "homepage": "https://github.com/tanayhub/compiled-validations#readme",
+    "homepage": "https://github.com/tanayhub/validations#readme",
     "devDependencies": {
         "@types/node": "^17.0.22",
         "typescript": "^4.6.2"
