--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\"",
     "prepare": "npm run build",
-    "postversion": "git push && git push --tags"
+    "prepublish": "tsc",
+    "postversion": "git push && git push --tags",
+    "format": "prettier --write \"source/**/*.ts\"",
+    "lint": "eslint source"
   },
   "repository": {
     "type": "git",
@@ -29,6 +32,10 @@
   "homepage": "https://github.com/tanayhub/validations#readme",
   "devDependencies": {
     "@types/node": "^17.0.22",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
+    "eslint": "^8.13.0",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.2"
   },
   "files": [
