--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tanayhub/validations",
+  "name": "@tanayhub/validators",
   "version": "1.0.0",
   "description": "A set of intuitive validations for typescript and javascript",
   "main": "build/index.js",
