--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
+    "lint": "eslint \"source/**/*.ts\"",
+    "format": "prettier --write \"source/**/*.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "tsc",
     "prestart": "npm install",
@@ -28,6 +30,10 @@
   "homepage": "https://github.com/tanayhub/validators#readme",
   "devDependencies": {
     "@types/node": "^17.0.30",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "^8.14.0",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.4"
   },
   "files": [
