--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "lint": "eslint \"source/**/*.ts\"",
     "format": "prettier --write \"source/**/*.ts\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\"",
     "prepare": "tsc",
     "prestart": "npm install",
     "start": "node build"
